# calc

./: LICENSE  README.md  pubspec.yaml
.archive/matematikdart/: evaluator.dart  lexer.dart  matematik.dart  token.dart  token_type.dart
assets/: app_icon.pixil
lib/: bridge.dart  main.dart
lib/controllers/: standard_keypad_controller.dart
lib/matematik/: CMakeLists.txt
lib/matematik/matematik/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  Token.cpp  Token.h  exports.def  main.cpp  matematik.cpp  readme.txt
lib/pages/: settings_page.dart  standard_page.dart
lib/ui/display/: standard_display.dart
lib/ui/header_bar/: header_bar.dart
lib/ui/keypad/: standard_keypad.dart
lib/ui/menu_button/: menu_button.dart
lib/ui/navigation_panel/: navigation_panel.dart
lib/ui/title_bar/: caption_icon.dart  title_bar.dart
windows/runner/: CMakeLists.txt  main.cpp
